--- a/EMRProject/EMRProject/EMR/bin/EMR.dll.config
+++ b/EMRProject/EMRProject/EMR/bin/EMR.dll.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="con" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-D8FRGB1\SQLEXPRESS;Initial Catalog=EMRdb;Integrated Security=True"/>
+    <add name="con" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-AHH45AF\SQLEXPRESS;Initial Catalog=EMRdb;Integrated Security=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
